src/test/ui/consts/const-fn-destructuring-arg.stderr
error[E0658]: arguments of constant functions can only be immutable by-value bindings (see issue #48821)
  --> $DIR/const-fn-destructuring-arg.rs:7:13
   |
LL |             a,
   |             ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: arguments of constant functions can only be immutable by-value bindings (see issue #48821)
  --> $DIR/const-fn-destructuring-arg.rs:9:13
   |
LL |             b
   |             ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-destructuring-arg.rs:12:5
   |
LL |     a + b
   |     ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-destructuring-arg.rs:12:9
   |
LL |     a + b
   |         ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
